Изменение и добавление методов, которые возвращают множество всех объектов
